atom_src = [
	'atom/atom.cpp',
	'atom/atom_accent.cpp',
    'atom/atom_basic.cpp',
    'atom/atom_box.cpp',
    'atom/atom_char.cpp',
    'atom/atom_delim.cpp',
    'atom/atom_fence.cpp',
    'atom/atom_font.cpp',
    'atom/atom_frac.cpp',
    'atom/atom_matrix.cpp',
    'atom/atom_misc.cpp',
    'atom/atom_operator.cpp',
    'atom/atom_root.cpp',
    'atom/atom_row.cpp',
    'atom/atom_scripts.cpp',
    'atom/atom_sideset.cpp',
    'atom/atom_space.cpp',
    'atom/atom_stack.cpp',
    'atom/atom_text.cpp',
    'atom/atom_vrow.cpp',
    'atom/atom_zstack.cpp',
    'atom/colors_def.cpp'
]

if install_headerfiles
	install_headers([
		'atom_accent.h',
        'atom_basic.h',
        'atom_box.h',
        'atom_char.h',
        'atom_delim.h',
        'atom_fence.h',
        'atom_font.h',
        'atom_frac.h',
        'atom.h',
        'atom_matrix.h',
        'atom_misc.h',
        'atom_operator.h',
        'atom_root.h',
        'atom_row.h',
        'atom_scripts.h',
        'atom_sideset.h',
        'atom_space.h',
        'atom_stack.h',
        'atom_text.h',
        'atom_vrow.h',
        'atom_zstack.h'
	], subdir: 'microtex/atom')
endif
