core_src = [
	'core/debug_config.cpp',
    'core/formula.cpp',
    'core/formula_def.cpp',
    'core/glue.cpp',
    'core/localized_num.cpp',
    'core/parser.cpp',
    'core/split.cpp'
]

if install_headerfiles
	install_headers([
		'debug_config.h',
        'formula.h',
        'glue.h',
        'parser.h',
        'split.h'
	], subdir: 'microtex/core')
endif
