macro_src = [
    'macro/macro_accent.cpp',
    'macro/macro_colors.cpp',
    'macro/macro.cpp',
    'macro/macro_def.cpp',
    'macro/macro_delims.cpp',
    'macro/macro_fonts.cpp',
    'macro/macro_frac.cpp',
    'macro/macro_misc.cpp',
    'macro/macro_scripts.cpp',
    'macro/macro_space.cpp',
    'macro/macro_styles.cpp'
]

if install_headerfiles
    install_headers([
        'macro_accent.h',
        'macro_boxes.h',
        'macro_colors.h',
        'macro_decl.h',
        'macro_delims.h',
        'macro_env.h',
        'macro_fonts.h',
        'macro_frac.h',
        'macro.h',
        'macro_misc.h',
        'macro_scripts.h',
        'macro_sizes.h',
        'macro_space.h',
        'macro_styles.h',
        'macro_types.h'
    ], subdir: 'microtex/macro')
endif
