unimath_src = [
    'unimath/font_src.cpp',
    'unimath/math_type.cpp',
    'unimath/uni_char.cpp',
	'unimath/uni_font.cpp',
	'unimath/uni_symbol.cpp'
]

if install_headerfiles
	install_headers([
	    'font_src.h',
	    'font_meta.h',
	    'math_type.h',
	    'uni_char.h',
		'uni_font.h',
		'uni_symbol.h'
	], subdir: 'microtex/unimath')
endif
