utils_src = [
	'utils/string_utils.cpp',
	'utils/utf.cpp',
	'utils/utils.cpp'
]

if install_headerfiles
	install_headers([
		'dict_tree.h',
        'exceptions.h',
        'log.h',
        'nums.h',
        'string_utils.h',
        'utf.h',
        'utils.h',
        'types.h'
	], subdir: 'microtex/utils')
endif
